--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap-notify/bootstrap-notify.js"
+            ]
           },
           "configurations": {
             "production": {
