--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
-    "@angular/material": "^6.4.7",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "angularfire2": "^5.0.0-rc.11",
+    "bootstrap": "^4.1.3",
     "bootstrap-notify": "^3.1.3",
     "core-js": "^2.5.4",
-    "firebase": "^5.4.0",
+    "firebase": "^5.5.3",
+    "moment": "^2.22.2",
     "ng4-loading-spinner": "^1.2.3",
+    "open-iconic": "^1.1.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
