--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "angularfire2": "^5.0.0-rc.11",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "bootstrap-notify": "^3.1.3",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
+    "express-validator": "^5.3.0",
     "firebase": "^5.5.3",
     "moment": "^2.22.2",
+    "mongoose": "^5.3.2",
     "ng4-loading-spinner": "^1.2.3",
     "open-iconic": "^1.1.1",
     "rxjs": "^6.0.0",
