Added company schema, passport jwt

--- a/package.json
+++ b/package.json
@@ -22,14 +22,25 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "angularfire2": "^5.0.0-rc.11",
+    "bcrypt": "^3.0.2",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "bootstrap-notify": "^3.1.3",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
+    "express-validator": "^5.3.0",
     "firebase": "^5.5.3",
+    "jsonwebtoken": "^8.3.0",
     "moment": "^2.22.2",
+    "mongoose": "^5.3.4",
+    "morgan": "^1.9.1",
     "ng4-loading-spinner": "^1.2.3",
     "open-iconic": "^1.1.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "rxjs": "^6.0.0",
+    "serve-favicon": "^2.5.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
