--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "bootstrap": "^4.1.3",
     "bootstrap-notify": "^3.1.3",
     "core-js": "^2.5.4",
+    "cors": "^2.8.4",
     "express": "^4.16.4",
     "express-validator": "^5.3.0",
     "firebase": "^5.5.3",
+    "helmet": "^3.14.0",
     "jsonwebtoken": "^8.3.0",
     "moment": "^2.22.2",
     "mongoose": "^5.3.4",
